# so-vits-svc-fork

./: pyproject.toml
src/so_vits_svc_fork/: gui.py  gui_gtk.py
